Fixed too large gap between cookie message and common message

--- a/web/css/layout/_messages.less
+++ b/web/css/layout/_messages.less
@@ -26,8 +26,10 @@
         align-items: flex-start;
         gap: @1;
         padding: @3 @4;
-        margin-bottom: @3;
         border: 1px solid transparent;
+        + * {
+            margin-bottom: @3;
+        }
 
         .lib-css(font-family, @message__font-family);
         .lib-css(font-size, @message__font-size);
@@ -73,6 +75,9 @@
 }
 
 & when not (@critical) {
+    .messages:empty {
+        display: none;
+    }
     .message:where(.warning, .success, .notice, .error, .info) {
         .lib-css(background, @message__background);
         .lib-css(color, @message__color);
